--- a/hello/Deployment-helloworld.yml
+++ b/hello/Deployment-helloworld.yml
@@ -3,22 +3,22 @@ kind: "Deployment"
 apiVersion: "extensions/v1beta1"
 metadata:
   annotations: {}
-  name: "nginx"
+  name: "helloworld"
   labels:
-    nirmata.io/deployment.name: "nginx"
-    nirmata.io/application.run: "nginx"
+    nirmata.io/deployment.name: "helloworld"
+    nirmata.io/application.run: "hello-world"
     nirmata.io/environment.name: "secure-qa-06"
-    nirmata.io/application.name: "nginx"
-    nirmata.io/component: "nginx"
+    nirmata.io/application.name: "hello-world"
+    nirmata.io/component: "helloworld"
 spec:
-  replicas: 1
+  replicas: 2
   revisionHistoryLimit: 5
   selector:
     matchLabels:
-      nirmata.io/application.run: "nginx"
+      nirmata.io/application.run: "hello-world"
       nirmata.io/environment.name: "secure-qa-06"
-      nirmata.io/application.name: "nginx"
-      nirmata.io/component: "nginx"
+      nirmata.io/application.name: "hello-world"
+      nirmata.io/component: "helloworld"
     matchExpressions: []
   strategy:
     type: "RollingUpdate"
@@ -28,19 +28,19 @@ spec:
   template:
     metadata:
       annotations: {}
-      name: "nginx"
+      name: "helloworld"
       labels:
-        nirmata.io/deployment.name: "nginx"
-        nirmata.io/application.run: "nginx"
+        nirmata.io/deployment.name: "helloworld"
+        nirmata.io/application.run: "hello-world"
         nirmata.io/environment.name: "secure-qa-06"
-        nirmata.io/application.name: "nginx"
-        nirmata.io/component: "nginx"
+        nirmata.io/application.name: "hello-world"
+        nirmata.io/component: "helloworld"
     spec:
       terminationGracePeriodSeconds: 30
       nodeSelector: {}
       containers:
-      - name: "nginx"
-        image: "nginx:1.7"
+      - name: "helloworld"
+        image: "nirmata/hello-world:latest"
         command: []
         args: []
         ports:
